<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ChinaPM25</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="exchange">Exchange</string>
    <string name="city">City</string>
    <string name="city_chinese">城市</string>
    <string name="operator_user">Operator</string>
    <string name="operator_seller">Seller</string>
    <string name="please_wait">Please waiting...</string>
    <string name="fail">Get data failure</string>
    <string name="get_data">Refresh</string>
    <string name="app_title">ChinaPM25 (http://pjq.me)</string>
    <string name="clear_search">清除搜索</string>
    <string name="search">搜索</string>
    <string name="Map">地图</string>
    <string name="menu_refresh">刷新</string>

</resources>
