<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">

<!--    <item android:id="@+id/action_settings" android:title="@string/action_settings"-->
<!--         app:showAsAction="never" />-->
<!--    <item android:id="@+id/clear_search_item" android:title="@string/clear_search"-->
<!--         app:showAsAction="never" />-->
    <item android:id="@+id/search_item" android:title="@string/search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="ifRoom" />
    <item android:id="@+id/map_item" android:title="@string/Map"
        android:icon="@drawable/ic_action_map"
        app:showAsAction="ifRoom" />
    <item android:id="@+id/refresh_list"
        android:title="@string/menu_refresh"
        app:showAsAction="never" />
</menu>
