<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/selector_list_white"
    android:paddingBottom="3dip"
    android:paddingLeft="10dip"
    android:paddingRight="10dip"
    android:paddingTop="3dip"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/itemTime"
        style="@style/TextStyleHistoryItemTime"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="2014-11-30 20:00" />

    <TextView
        android:id="@+id/index"
        style="@style/TextStyleHistoryItemGrey"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:text="@string/operator_seller"
        android:visibility="visible" />

    <RelativeLayout
        android:id="@+id/pingyinLayout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/exchange_history_activity_text_height"
        android:layout_below="@id/itemTime">

        <TextView
            android:id="@+id/pingyinTitle"
            style="@style/TextStyleHistoryItemGrey"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="bottom"
            android:text="@string/city" />

        <TextView
            android:id="@+id/pingyinCityName"
            style="@style/TextStyleHistoryItemTime"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/common_left_margin"
            android:layout_toRightOf="@id/pingyinTitle"
            android:gravity="bottom"
            android:text="@string/city" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/cityLayout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/exchange_history_activity_text_height"
        android:layout_below="@id/pingyinLayout">

        <TextView
            android:id="@+id/cityTitle"
            style="@style/TextStyleHistoryItemGrey"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="bottom"
            android:text="@string/city_chinese" />

        <TextView
            android:id="@+id/cityName"
            style="@style/TextStyleHistoryItemGiftBlue"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/common_left_margin"
            android:layout_toRightOf="@id/cityTitle"
            android:gravity="bottom"
            android:text="@string/city_chinese" />

    </RelativeLayout>

    <TextView
        android:id="@+id/itemExchangeGiftUser"
        style="@style/TextStylePM25"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@id/index"
        android:layout_marginTop="5dip"
        android:padding="5dip"
        android:text="@string/operator_user" />
</RelativeLayout>
